[gd_scene load_steps=10 format=3 uid="uid://6k85bif87r1q"]

[ext_resource type="Script" path="res://Classes/Effects/MindTheGap/Gap.gd" id="1_uhis5"]
[ext_resource type="Texture2D" uid="uid://dhqq0ovgi3bve" path="res://Classes/Effects/MindTheGap/agujeros.png" id="2_gilpg"]
[ext_resource type="AudioStream" uid="uid://dn7oy8pqe620i" path="res://Classes/Monigotes/SFX/sfx_yellvoid.wav" id="3_bj5pl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iyvxw"]
atlas = ExtResource("2_gilpg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah53l"]
atlas = ExtResource("2_gilpg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsgri"]
atlas = ExtResource("2_gilpg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxrtp"]
atlas = ExtResource("2_gilpg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_54dgb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyvxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah53l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsgri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxrtp")
}],
"loop": false,
"name": &"BW",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxrtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsgri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah53l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyvxw")
}],
"loop": false,
"name": &"FW",
"speed": 10.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j2qry"]
radius = 0.260333
height = 1.4568

[node name="Gap" type="Area3D"]
script = ExtResource("1_uhis5")

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
layers = 2
axis = 1
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_54dgb")
animation = &"FW"
autoplay = "FW"
frame = 3
frame_progress = 1.0

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19089, 0)
shape = SubResource("CapsuleShape3D_j2qry")
disabled = true

[node name="YellVoid" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bj5pl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
